--- a/Actividad 3.03.02/scss/_menu.scss
+++ b/Actividad 3.03.02/scss/_menu.scss
@@ -48,7 +48,7 @@ nav {
     }
 
     a:hover {
-        @include color;
+        @include color-hover;
         @include animaciones(iluminar, 0.4s);
     }
 }
