--- a/Actividad 3.03.02/css/screen.css
+++ b/Actividad 3.03.02/css/screen.css
@@ -1,3 +1,14 @@
+@keyframes iluminar {
+  from {
+      background-color: #666;
+      color: #eee;
+  }
+  to {
+      background-color: #888;
+      color: #fff;
+  }
+}
+
 nav {
   position: absolute;
   width: 100%;
@@ -43,10 +54,12 @@ nav a {
   cursor: pointer;
 }
 nav a:hover {
-  color: #eee;
-  background-color: #666;
   -webkit-animation: iluminar 0.4s linear;
   animation: iluminar 0.4s linear;
+}
+nav a:hover li.categoria:hover {
+  color: #fff;
+  background-color: #888;
 }
 
 body {
